--- a/cfg/algo/dlearning.yaml
+++ b/cfg/algo/dlearning.yaml
@@ -3,22 +3,22 @@ name: dlearning
 train_every: 64
 
 lyapunov:
-  hidden_units: [256, 128, 64]
+  hidden_units: [256, 256, 128, 128, 64]
   learning_rate: 0.004
   layer_norm: true
   softplus: false # 是否在输出使用softplus函数，确保V(x)为正值
 
 dfunction:
-  hidden_units: [256, 128, 64]
-  learning_rate: 0.005
+  hidden_units: [512, 256, 256, 128, 128, 64]
+  learning_rate: 0.001
   layer_norm: true
 
 controller:
-  hidden_units: [64, 32, 16]
+  hidden_units: [256, 256, 64]
   learning_rate: 0.005
   layer_norm: true
 
 learning:
-  lyapunov_GD_steps: 200
-  dfunction_GD_steps: 200
-  controller_GD_steps: 100
+  lyapunov_GD_steps: 1
+  dfunction_GD_steps: 1
+  controller_GD_steps: 1
