--- a/cfg/task/DlearningHoverEnv.yaml
+++ b/cfg/task/DlearningHoverEnv.yaml
@@ -13,6 +13,8 @@ drone_model: Hummingbird
 force_sensor: false
 time_encoding: false
 
+init_state: random2
+
 reward_effort_weight: 0.1
 reward_action_smoothness_weight: 0.0
 reward_motion_smoothness_weight: 0.0
