--- a/scripts/train.yaml
+++ b/scripts/train.yaml
@@ -4,7 +4,7 @@ hydra:
   # see https://hydra.cc/docs/advanced/search_path/
   # - file://../cfg
   - isaac-training/third_party/D_Learning/cfg
-headless: 1 # 是否显示isaac GUI
+headless: 0 # 是否显示isaac GUI
 physics_gpu: 0
 physics_engine: physx5
 
@@ -12,13 +12,13 @@ physics_engine: physx5
 # env: ${task.env} # 同样在Forest.yaml中有env变量
 
 # total_frames: 150_000_000
-total_frames: 500000000
+total_frames: 5000000
 max_iters: -1
 eval_interval: -1
-save_interval: 10
+save_interval: 1
 seed: 0
 
-num_minibatches: 1024
+num_minibatches: 256
 
 viewer:
   resolution: [960, 720]
@@ -38,19 +38,20 @@ wandb:
   monitor_gym: True
   tags: 
 
-checkpoint_path: null
-checkpoint_episode: null
+# checkpoint_path: null
+# checkpoint_episode: null
+checkpoint_path: swanlog/run-20250723_134337-9a2696a9
+checkpoint_episode: 15
 
 defaults:
   - task: DlearningHoverEnv
-  # - algo: learninglyapunov
   - algo: dlearning
   - _self_
 
 env:
-  num_envs: 2048
+  num_envs: 32
   env_spacing: 0
-  max_episode_length: 64
+  max_episode_length: 128
 
 sim:
   dt: 0.016
