--- a/dlearning/controllers/cfg/se3_controller_hummingbird.yaml
+++ b/dlearning/controllers/cfg/se3_controller_hummingbird.yaml
@@ -1,7 +1,16 @@
 # Lee position controller parameters
 position_gain: [-1.5, -1.5, -1.5]
 # position_gain: [0, 0, 0]
-velocity_gain: [2.2, 2.2, 2.2]
+velocity_gain: [2.0, 2.0, 2.0]
 # velocity_gain: [0, 0, 0]
-attitude_gain: [0.7, 0.7, 0.035]
-angular_rate_gain: [0.1, 0.1, 0.025]
+# attitude_gain: [2.0, 2.0, 0.5]
+# angular_rate_gain: [0.5, 0.5, 0.2]
+
+attitude_gain: [0.3, 0.3, 0.2]
+angular_rate_gain: [0.13, 0.13, 0.2]
+
+# attitude_control_TK_hierarchical
+# attitude_gain: [0.1, 0.1, 0.1]
+# angular_rate_gain: [0.050, 0.050, 0.05]
+
+ # TODO 调姿态控制的参
