--- a/scripts/train.yaml
+++ b/scripts/train.yaml
@@ -12,13 +12,13 @@ physics_engine: physx5
 # env: ${task.env} # 同样在Forest.yaml中有env变量
 
 # total_frames: 150_000_000
-total_frames: 5000000
+total_frames: 400000
 max_iters: -1
 eval_interval: -1
-save_interval: 1
-seed: 0
+save_interval: 100
+seed: 1
 
-num_minibatches: 1024
+num_minibatches: 4096
 
 viewer:
   resolution: [960, 720]
@@ -38,23 +38,25 @@ wandb:
   monitor_gym: True
   tags: 
 
-checkpoint_path: null
-checkpoint_episode: null
+checkpoint_path: swanlog/run-20250825_202244-7ac163ee
+checkpoint_episode: final
 # checkpoint_path: swanlog/run-20250723_134337-9a2696a9
 # checkpoint_episode: 3
 
 defaults:
   - task: DlearningHoverEnv
-  - algo: dlearning
+  - algo: hierarchicaldlearning
   - _self_
 
 env:
   num_envs: 1024
   env_spacing: 0
-  max_episode_length: 1024
+  max_episode_length: 32
+  # pos 400 
+  # atti 64
 
 sim:
-  dt: 0.016
+  dt: 0.008
   substeps: 1
   gravity: [0, 0, -9.81]
   replicate_physics: false
