--- a/cfg/algo/hierarchicaldlearning.yaml
+++ b/cfg/algo/hierarchicaldlearning.yaml
@@ -4,15 +4,15 @@ train_every: 64
 
 lyapunov:
   pos:
-    hidden_units: [256, 256, 128, 128, 64, 64]
+    hidden_units: [256, 128, 128, 64]
     learning_rate: 0.00001
     layer_norm: 0
     softplus: false # 是否在输出使用softplus函数，确保V(x)为正值
     enforce_positive: 0  # 是否强制正定
     virtual_plan_units: 16
   atti:
-    hidden_units: [256, 256, 128, 128, 64, 64]
-    learning_rate: 0.00000001
+    hidden_units: [256, 128, 128, 64]
+    learning_rate: 0.000001
     layer_norm: 0
     softplus: false # 是否在输出使用softplus函数，确保V(x)为正值
     enforce_positive: 0  # 是否强制正定
@@ -20,22 +20,22 @@ lyapunov:
 
 dfunction:
   pos:
-    hidden_units: [256, 256, 128, 128, 64]
-    learning_rate: 0.0001
+    hidden_units: [256, 128, 128, 64]
+    learning_rate: 0.00001
     layer_norm: true
   atti:
-    hidden_units: [256, 256, 128, 128, 64]
-    learning_rate: 0.0001
+    hidden_units: [256, 128, 128, 64]
+    learning_rate: 0.00001
     layer_norm: true
 
 controller:
   pos:
     hidden_units: [64, 64, 16]
-    learning_rate: 0.0003
+    learning_rate: 0.001
     layer_norm: true
   atti:
     hidden_units: [64, 64, 16]
-    learning_rate: 0.0003
+    learning_rate: 0.00001
     layer_norm: true
 
 learning:
@@ -44,6 +44,6 @@ learning:
     dfunction_GD_steps: 1
     controller_GD_steps: 1
   atti:
-    lyapunov_GD_steps: 1000
-    dfunction_GD_steps: 100
-    controller_GD_steps: 10
+    lyapunov_GD_steps: 1
+    dfunction_GD_steps: 1
+    controller_GD_steps: 1
