--- a/cfg/task/DlearningHoverEnv.yaml
+++ b/cfg/task/DlearningHoverEnv.yaml
@@ -8,8 +8,8 @@ defaults:
 env:
   num_envs: 128
 
-drone_model: Hummingbird
-# drone_model: crazyflie
+# drone_model: Hummingbird
+drone_model: crazyflie
 force_sensor: false
 time_encoding: false
 
