--- a/scripts/train.yaml
+++ b/scripts/train.yaml
@@ -12,13 +12,13 @@ physics_engine: physx5
 # env: ${task.env} # 同样在Forest.yaml中有env变量
 
 # total_frames: 150_000_000
-total_frames: 1000000
+total_frames: 30000
 max_iters: -1
 eval_interval: -1
-save_interval: 5
-seed: 2
+save_interval: 10
+seed: 11
 
-num_minibatches: 256
+num_minibatches: 32
 
 viewer:
   resolution: [960, 720]
@@ -32,7 +32,7 @@ wandb:
   job_type: train
   entity: rfly
   project: omnidrones
-  # mode: disabled # set to 'disabled' when debugging locally
+  # mode: ['disabled', 'cloud', 'offline', 'local']
   mode: cloud
   run_id: 
   monitor_gym: True
@@ -51,8 +51,8 @@ defaults:
 
 env:
   num_envs: 2048
-  env_spacing: 0
-  max_episode_length: 256
+  env_spacing: 3
+  max_episode_length: 128
   # pos 400 
   # atti 64
 
