带有先验知识的D学习； 添加实验日志； 调整控制器参数

--- a/cfg/algo/hierarchicaldlearning.yaml
+++ b/cfg/algo/hierarchicaldlearning.yaml
@@ -5,14 +5,14 @@ train_every: 64
 lyapunov:
   pos:
     hidden_units: [256, 128, 128, 64]
-    learning_rate: 0.00001
+    learning_rate: 0.0005
     layer_norm: 0
     softplus: false # 是否在输出使用softplus函数，确保V(x)为正值
     enforce_positive: 0  # 是否强制正定
     virtual_plan_units: 16
   atti:
     hidden_units: [256, 128, 128, 64]
-    learning_rate: 0.00005
+    learning_rate: 0.00001
     layer_norm: 0
     softplus: false # 是否在输出使用softplus函数，确保V(x)为正值
     enforce_positive: 0  # 是否强制正定
@@ -21,29 +21,41 @@ lyapunov:
 dfunction:
   pos:
     hidden_units: [256, 128, 128, 64]
-    learning_rate: 0.0000001
+    learning_rate: 0.00001
     layer_norm: true
   atti:
     hidden_units: [256, 128, 128, 64]
-    learning_rate: 0.0000001
+    learning_rate: 0.00001
+    layer_norm: true
+
+dynamics:
+  pos:
+    hidden_units: [64,64, 32, 32]
+    learning_rate: 0.00002
+    state_dim: 6
+    layer_norm: true
+  atti:
+    hidden_units: [32, 32, 16, 16]
+    learning_rate: 0.00002
+    state_dim: 3
     layer_norm: true
 
 controller:
   pos:
-    hidden_units: [128, 64, 64, 16]
-    learning_rate: 0.0005
+    hidden_units: [64, 16]
+    learning_rate: 0.00005
     layer_norm: true
   atti:
-    hidden_units: [128, 64, 64, 16]
-    learning_rate: 0.002
+    hidden_units: [16, 8]
+    learning_rate: 0.0001
     layer_norm: true
 
 learning:
   pos:
     lyapunov_GD_steps: 100
-    dfunction_GD_steps: 100
+    dfunction_GD_steps: 1000
     controller_GD_steps: 1000
   atti:
-    lyapunov_GD_steps: 1000
+    lyapunov_GD_steps: 100
     dfunction_GD_steps: 1000
     controller_GD_steps: 1000
