--- a/scripts/eval.yaml
+++ b/scripts/eval.yaml
@@ -33,8 +33,7 @@ wandb:
   monitor_gym: True
   tags: 
 
-checkpoint_path: swanlog/run-20250911_153138-91cad4f6
-# swanlog/run-20250826_103947-d4abc3b2
+checkpoint_path: swanlog/DL_1014_01
 checkpoint_episode: final
 
 defaults:
@@ -43,9 +42,9 @@ defaults:
   - _self_
 
 env:
-  num_envs: 32
+  num_envs: 128
   env_spacing: 0
-  max_episode_length: 256
+  max_episode_length: 400
   # pos 400 
   # atti 64
 
