--- a/scripts/train.yaml
+++ b/scripts/train.yaml
@@ -12,10 +12,10 @@ physics_engine: physx5
 # env: ${task.env} # 同样在Forest.yaml中有env变量
 
 # total_frames: 150_000_000
-total_frames: 30000
+total_frames: 100000
 max_iters: -1
 eval_interval: -1
-save_interval: 10
+save_interval: 5
 seed: 11
 
 num_minibatches: 32
@@ -38,11 +38,12 @@ wandb:
   monitor_gym: True
   tags: 
 
-# checkpoint_path: swanlog/run-20250826_110601-34db79b4
-checkpoint_path: null
+
+# checkpoint_path: swanlog/run-20250912_141522-de90706d
+# checkpoint_path: swanlog/run-20250927_235156-d1ac78c1
+checkpoint_path: swanlog/run-20251014_112651-32666f5c
 checkpoint_episode: final
-# checkpoint_path: swanlog/run-20250723_134337-9a2696a9
-# checkpoint_episode: 3
+
 
 defaults:
   - task: DlearningHoverEnv
@@ -50,9 +51,9 @@ defaults:
   - _self_
 
 env:
-  num_envs: 2048
-  env_spacing: 3
-  max_episode_length: 128
+  num_envs: 1024
+  env_spacing: 0
+  max_episode_length: 400
   # pos 400 
   # atti 64
 
